--- a/cv.html
+++ b/cv.html
@@ -223,13 +223,13 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<p><a href="images/AJohnWoodill_CV.pdf">Download (PDF)</a></p>
+<p><a href="images/CV_ArlanBrucal.pdf">Download (PDF)</a></p>
 <div class="figure">
-<img src="images/AJohnWoodill_CV-page-001.jpg" />
+<img src="images/ArlanBrucal_CV-page-001.jpg" />
 
 </div>
 <div class="figure">
-<img src="images/AJohnWoodill_CV-page-002.jpg" />
+<img src="images/ArlanBrucal_CV-page-002.jpg" />
 
 </div>
 <script>
