--- a/index.html
+++ b/index.html
@@ -222,19 +222,24 @@ $(document).ready(function () {
 </div>
 
 
-<p><br> <br></p>
+<br> <br>
+<center>
+<div style="width:300px; height=200px">
 <div class="figure">
 <img src="images/abrucal.jpg" />
 
 </div>
+</div>
+</center>
 <p><br></p>
 <p>I am a Postdoctoral Research Fellow at the University of Hawaii Economic Research Organization (UHERO). My areas of specialization include Environmental Economics, International Trade and Energy Economics.</p>
 <p>Feel free to contact me through email.</p>
-<p>Arlan Brucal</p>
-<p>al[at]hawaii.edu; azibrucal[at]gmail.com</p>
-<p>Address:</p>
-<p>742 Lukepane Avenue Honolulu, HI 96816 USA</p>
-<p>Block 14 Lot 36 Westbay Homes Daan-Bukid, Bacoor, Cavite Philippines 4102</p>
+<p><strong>Arlan Brucal</strong></p>
+<p>al[at]hawaii.edu</p>
+<p>azibrucal[at]gmail.com</p>
+<p><strong>Address</strong></p>
+<p>Current: 742 Lukepane Avenue Honolulu, HI 96816 USA</p>
+<p>Previous: Block 14 Lot 36 Westbay Homes Daan-Bukid, Bacoor, Cavite Philippines 4102</p>
 
 
 
