--- a/code.html
+++ b/code.html
@@ -19,6 +19,7 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 
@@ -179,7 +180,6 @@ $(document).ready(function () {
 <div class="container-fluid main-container">
 
 <!-- tabsets -->
-<script src="site_libs/navigation-1.1/tabsets.js"></script>
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
@@ -325,7 +325,7 @@ progvillm   -<span class="fl">0.781204</span>   <span class="fl">0.640372</span>
 sexhead      <span class="fl">0.306742</span>   <span class="fl">0.397089</span>   <span class="fl">0.772</span>   <span class="fl">0.5813</span>  
 agehead     -<span class="fl">0.005983</span>   <span class="fl">0.014747</span>  -<span class="fl">0.406</span>   <span class="fl">0.7546</span>  
 ---
-Signif. codes:<span class="st">  </span><span class="dv">0</span> ‘**<span class="er">*</span>’ <span class="fl">0.001</span> ‘**’ <span class="fl">0.01</span> ‘*’ <span class="fl">0.05</span> ‘.’ <span class="fl">0.1</span> ‘ ’ <span class="dv">1</span>
+Signif. codes:<span class="st">  </span><span class="dv">0</span> â€˜**<span class="er">*</span>â€™ <span class="fl">0.001</span> â€˜**â€™ <span class="fl">0.01</span> â€˜*â€™ <span class="fl">0.05</span> â€˜.â€™ <span class="fl">0.1</span> â€˜ â€™ <span class="dv">1</span>
 
 (Dispersion parameter for gaussian family taken to be <span class="fl">0.2078647</span>)
 
@@ -439,8 +439,11 @@ Number of Fisher Scoring iterations:<span class="st"> </span><span class="dv">2<
 <script>
 
 // add bootstrap table styles to pandoc tables
-$(document).ready(function () {
+function bootstrapStylePandocTables() {
   $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+}
+$(document).ready(function () {
+  bootstrapStylePandocTables();
 });
 
 
