--- a/index.html
+++ b/index.html
@@ -230,15 +230,13 @@ $(document).ready(function () {
 </div>
 </center>
 <p><br></p>
-<p>I am a Postdoctoral Research Fellow at the University of Hawaii Economic Research Organization (UHERO). My areas of specialization include Environmental Economics, International Trade and Energy Economics.</p>
+<p>I am a Postdoctoral Research Fellow at the London School of Economics - Grantham Research Institute for Climate Change and the Environment. My areas of specialization include Environmental Economics, International Trade and Energy Economics.</p>
 <p>Feel free to contact me through email.</p>
 <p><strong>Arlan Brucal</strong></p>
-<p>al[at]hawaii.edu</p>
+<p>A.Z.Brucal[at]lse.ac.uk</p>
 <p>azibrucal[at]gmail.com</p>
 <p><strong>Address</strong></p>
-<p>Current: 742 Lukepane Avenue Honolulu, HI 96816 USA</p>
-<p>Previous: Block 14 Lot 36 Westbay Homes Daan-Bukid, Bacoor, Cavite Philippines 4102</p>
-<p>I am in London</p>
+<p>The London School of Economics and Political Science (LSE), Houghton Street, London WC2A 2AE UK</p>
 
 
 
