--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ $(document).ready(function () {
 <p><br></p>
 <p>I am a Postdoctoral Research Fellow at the London School of Economics and Political Science - Grantham Research Institute for Climate Change and the Environment. My areas of specialization include Environmental Economics, International Trade and Energy Economics.</p>
 <p>Feel free to contact me.</p>
-<p><strong>Contact Details</strong> The London School of Economics and Political Science Houghton Street, London WC2A 2AE UK Ph: +44 (0)20 7107 5027 or +44 (0)20 7107 5440 Email: A.Z.Brucal[at]lse.ac.uk</p>
+<p><strong>Contact Details</strong> The London School of Economics and Political Science <br> Houghton Street, London WC2A 2AE UK Ph: +44 (0)20 7107 5027 or +44 (0)20 7107 5440 Email: A.Z.Brucal[at]lse.ac.uk</p>
 
 
 
