--- a/cv.html
+++ b/cv.html
@@ -222,14 +222,7 @@ $(document).ready(function () {
 
 <p><br></p>
 <p><a href="images/CV_ArlanBrucal.pdf">Download (PDF)</a></p>
-<div class="figure">
-<img src="images/ArlanBrucal_CV-page-001.jpg" alt="" />
-
-</div>
-<div class="figure">
-<img src="images/ArlanBrucal_CV-page-002.jpg" alt="" />
-
-</div>
+<p><img src="images/ArlanBrucal_CV-page-001.jpg" alt="" /> <img src="images/ArlanBrucal_CV-page-002.jpg" alt="" /></p>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
