--- a/cv.html
+++ b/cv.html
@@ -221,8 +221,8 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<p><a href="images/CV_ArlanBrucal_2016-01-22.pdf">Download (PDF)</a></p>
-<p><img src="images/CV_ArlanBrucal_2016-01-22-page-001.jpg" alt="" /> <img src="images/CV_ArlanBrucal_2016-01-22-page-002.jpg" alt="" /> <img src="images/CV_ArlanBrucal_2016-01-22-page-003.jpg" alt="" /></p>
+<p><a href="images/CV_ArlanBrucal.pdf">Download (PDF)</a></p>
+<p><img src="images/CV_ArlanBrucal_2016-01-22-page-001.jpg" alt="" /> <img src="images/CV_ArlanBrucal_2016-01-22-page-002.jpg" alt="" /></p>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
