--- a/cv.html
+++ b/cv.html
@@ -221,13 +221,13 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<p><a href="images/CV_ArlanBrucal.pdf">Download (PDF)</a></p>
+<p><a href="images/CV_ArlanBrucal_2016-01-22.pdf">Download (PDF)</a></p>
 <div class="figure">
-<img src="images/ArlanBrucal_CV-page-001.jpg" alt="" />
+<img src="images/CV_ArlanBrucal_2016-01-22-page-001.jpg" alt="" />
 
 </div>
 <div class="figure">
-<img src="images/ArlanBrucal_CV-page-002.jpg" alt="" />
+<img src="images/CV_ArlanBrucal_2016-01-22-page-002.jpg" alt="" />
 
 </div>
 <script>
