--- a/cv.html
+++ b/cv.html
@@ -221,17 +221,17 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<p><a href="images/CV_ArlanBrucal.pdf">Download (PDF)</a></p>
+<p><a href="images/CV_ArlanBrucalb.pdf">Download (PDF)</a></p>
 <div class="figure">
-<img src="images/ArlanBrucal_CV-page-001.jpg" alt="" />
+<img src="images/ArlanBrucal_CV-page-001b.jpg" alt="" />
 
 </div>
 <div class="figure">
-<img src="images/ArlanBrucal_CV-page-002.jpg" alt="" />
+<img src="images/ArlanBrucal_CV-page-002b.jpg" alt="" />
 
 </div>
 <div class="figure">
-<img src="images/ArlanBrucal_CV-page-003.jpg" alt="" />
+<img src="images/ArlanBrucal_CV-page-003b.jpg" alt="" />
 
 </div>
 <script>
