--- a/teaching.html
+++ b/teaching.html
@@ -223,7 +223,10 @@ $(document).ready(function () {
 <p><br> <br></p>
 <div id="teaching" class="section level2">
 <h2>Teaching</h2>
-<hr />
+<div id="summer-2015" class="section level4">
+<h4><strong>Summer 2015 </strong></h4>
+<p>Economics 321 - Introduction to Statistics</p>
+</div>
 </div>
 
 
