--- a/teaching.html
+++ b/teaching.html
@@ -223,9 +223,17 @@ $(document).ready(function () {
 <p><br> <br></p>
 <div id="teaching" class="section level2">
 <h2>Teaching</h2>
-<div id="summer-2015" class="section level4">
-<h4><strong>Summer 2015 </strong></h4>
-<p>Economics 321 - Introduction to Statistics</p>
+<div id="university-of-hawaii-usa" class="section level4">
+<h4>** University of Hawai`i, USA **####</h4>
+<p>Instructor, Economics 321 - Introduction to Statistics, Summer 2015 Instructor, Economics 130 - Introduction to Microeconomics, Summer 2012-2015 Teaching Assistant, Economics 130 - Introduction to Microeconomics, SY 2011-2012</p>
+</div>
+<div id="de-la-salle-university-philippines" class="section level4">
+<h4>** De La Salle University, Philippines **####</h4>
+<p>Assistant Professorial Lecturer, ECONTWO - Introduction to Microeconomics, 1st Term 2009</p>
+</div>
+<div id="university-of-the-philippines" class="section level4">
+<h4>** University of the Philippines **####</h4>
+<p>Teaching Fellow, various undergraduate economics courses, 2005-2007</p>
 </div>
 </div>
 
