--- a/teaching.html
+++ b/teaching.html
@@ -223,12 +223,12 @@ $(document).ready(function () {
 <p><br> <br></p>
 <div id="teaching" class="section level2">
 <h2>Teaching</h2>
-<div id="university-of-hawaii---usa" class="section level4">
-<h4>** University of Hawai`i - USA**####</h4>
+<div id="university-of-hawaii-usa" class="section level4">
+<h4>** University of Hawai`i, USA**####</h4>
 <p>Instructor, Economics 321 - Introduction to Statistics, Summer 2015 Instructor, Economics 130 - Introduction to Microeconomics, Summer 2012-2015 Teaching Assistant, Economics 130 - Introduction to Microeconomics, SY 2011-2012</p>
 </div>
-<div id="de-la-salle-university---philippines" class="section level4">
-<h4>** De La Salle University - Philippines**####</h4>
+<div id="de-la-salle-university-philippines" class="section level4">
+<h4>** De La Salle University, Philippines**####</h4>
 <p>Assistant Professorial Lecturer, ECONTWO - Introduction to Microeconomics, 1st Term 2009</p>
 </div>
 <div id="university-of-the-philippines" class="section level4">
