--- a/teaching.html
+++ b/teaching.html
@@ -224,15 +224,15 @@ $(document).ready(function () {
 <div id="teaching" class="section level2">
 <h2>Teaching</h2>
 <div id="university-of-hawaii-usa" class="section level4">
-<h4>** University of Hawai`i, USA**#### <br></h4>
+<h4><strong>University of Hawai`i, USA</strong>#### <br></h4>
 <p>Instructor, Economics 321 - Introduction to Statistics, Summer 2015 <br> Instructor, Economics 130 - Introduction to Microeconomics, Summer 2012-2015 <br> Teaching Assistant, Economics 130 - Introduction to Microeconomics, SY 2011-2012 <br></p>
 </div>
 <div id="de-la-salle-university-philippines" class="section level4">
-<h4>** De La Salle University, Philippines**#### <br></h4>
+<h4><strong>De La Salle University, Philippines</strong>#### <br></h4>
 <p>Assistant Professorial Lecturer, ECONTWO - Introduction to Microeconomics, 1st Term 2009 <br></p>
 </div>
 <div id="university-of-the-philippines" class="section level4">
-<h4>** University of the Philippines**####</h4>
+<h4><strong>University of the Philippines</strong></h4>
 <p>Teaching Fellow, various undergraduate economics courses, 2005-2007 <br></p>
 </div>
 </div>
