--- a/teaching.html
+++ b/teaching.html
@@ -223,18 +223,12 @@ $(document).ready(function () {
 <p><br> <br></p>
 <div id="teaching" class="section level2">
 <h2>Teaching</h2>
-<div id="university-of-hawaii-usa" class="section level4">
-<h4><strong>University of Hawai`i, USA</strong></h4>
+<p><strong>University of Hawai`i, USA</strong></p>
 <p>Instructor, Economics 321 - Introduction to Statistics, Summer 2015 <br> Instructor, Economics 130 - Introduction to Microeconomics, Summer 2012-2015 <br> Teaching Assistant, Economics 130 - Introduction to Microeconomics, SY 2011-2012 <br></p>
-</div>
-<div id="de-la-salle-university-philippines" class="section level4">
-<h4><strong>De La Salle University, Philippines</strong></h4>
+<p><strong>De La Salle University, Philippines</strong></p>
 <p>Assistant Professorial Lecturer, ECONTWO - Introduction to Microeconomics, 1st Term 2009 <br></p>
-</div>
-<div id="university-of-the-philippines" class="section level4">
-<h4><strong>University of the Philippines</strong></h4>
+<p><strong>University of the Philippines</strong></p>
 <p>Teaching Fellow, various undergraduate economics courses, 2005-2007 <br></p>
-</div>
 </div>
 
 
