--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ $(document).ready(function () {
 </div>
 </center>
 <p><br></p>
-<p>I am a Postdoctoral Research Fellow at the London School of Economics and Political Science - Grantham Research Institute for Climate Change and the Environment. My areas of specialization is Applied Econometrics with emphasis on Environmental Economics, International Trade and Energy Economics.</p>
+<p>I am a Postdoctoral Research Fellow at the London School of Economics and Political Science - Grantham Research Institute for Climate Change and the Environment. I am interested in applied econometrics with emphasis in the fields of environmental and energy economics and international trade. My research uses microdata to analyze the economics of household- and firm-level energy consumption and investment on energy-efficient technologies.</p>
 <p>Feel free to contact me.</p>
 <p><strong>Contact Details</strong> <br> The London School of Economics and Political Science <br> Houghton Street, London <br> WC2A 2AE UK <br> Ph: +44 (0)20 7107 5027 or +44 (0)20 7107 5440 <br> Email: A.Z.Brucal[at]lse.ac.uk</p>
 
